header and banner section work done

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <!-- header section start -->
+    <header>
+        <nav>
+            <h1 class="header-title">Influencer products</h1>
+            <ul>
+                <li>Home</li>
+                <li>Product</li>
+                <li>Sign up</li>
+                <li>Login</li>
+                <li><img src="logos/icons8-search-30.png" alt=""></li>
+                <li><img src="logos/icons8-cart-24.png" alt=""></li>
+            </ul>
+        </nav>
+        <div class="header-banner-container">
+            <div class="header-banner-text-container">
+                <h1 class="banner-title">Start your Journey as <br>
+                    Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="banner-btn">Preebook now <img src="logos/arrow-forward 1.png" alt=""></button>
+            </div>
+            <div class="header-banner-img-container">
+                <img class="Circle" src="images/Circle design.svg" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
