header section img done

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                 <h1 class="banner-title">Start your Journey as <br>
                     Influencer</h1>
                 <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <button class="banner-btn">Preebook now <img src="logos/arrow-forward 1.png" alt=""></button>
+                <button class="banner-btn">PreBook now <img src="logos/arrow-forward 1.png" alt=""></button>
             </div>
             <div class="header-banner-img-container">
                 <img class="Circle" src="images/Circle design.svg" alt="">
+                <img class="camera" src="images/main-camera.png" alt="">
             </div>
         </div>
     </header>
