--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
                 <img class="camera" src="images/main-camera.png" alt="">
             </div>
         </div>
+
+        <div class="sponsors-container">
+            <img src="logos/Alibaba.svg" alt="" class="sponsor">
+            <img src="logos/Amazon.svg" alt="" class="sponsor">
+            <img src="logos/Daraz.pk Logo.svg" alt="" class="sponsor">
+            <img src="logos/Ebay.svg" alt="" class="sponsor">
+            <img src="logos/Rakuten.svg" alt="" class="sponsor">
+            <img src="logos/Walmart.svg" alt="" class="sponsor">
+            <img src="logos/Target.svg" alt="" class="sponsor">
+        </div>
     </header>
 </body>
 </html>
