product section card done

--- a/index.html
+++ b/index.html
@@ -46,5 +46,24 @@
             <img src="logos/Target.svg" alt="" class="sponsor">
         </div>
     </header>
+     <!-- header section end -->
+
+     <!-- main section end -->
+     <main>
+        <section>
+            <h1 class="product-title">Popular Collection</h1>
+            <div class="product-card-container">
+                <div class="card">
+                    <img class="card-img" src="images/tripod.png" alt="">
+                    <h2 class="card-title">Flex Tripod</h2>
+                    <h3 class="card-price">$50.48</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+            </div>
+        </section>
+     </main>
 </body>
 </html>
