--- a/index.html
+++ b/index.html
@@ -62,6 +62,81 @@
                         Buyers protection possible!</p>
 
                 </div>
+                <div class="card">
+                    <img class="card-img" src="images/mic.png" alt="">
+                    <h2 class="card-title">Microphone</h2>
+                    <h3 class="card-price">$120.25</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/airpod.png" alt="">
+                    <h2 class="card-title">Airbuds</h2>
+                    <h3 class="card-price">$100.00</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/drone.png" alt="">
+                    <h2 class="card-title">Drone</h2>
+                    <h3 class="card-price">$980.25</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/lights.png" alt="">
+                    <h2 class="card-title">Light Setup</h2>
+                    <h3 class="card-price">$1200.00</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/setup.png" alt="">
+                    <h2 class="card-title">Photo-shoot set</h2>
+                    <h3 class="card-price">$820.40</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/camera.png" alt="">
+                    <h2 class="card-title">Vlogging Camera</h2>
+                    <h3 class="card-price">$1800.80</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/single-light.png" alt="">
+                    <h2 class="card-title">Green Screen</h2>
+                    <h3 class="card-price">$25.48</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="card">
+                    <img class="card-img" src="images/action.png" alt="">
+                    <h2 class="card-title">Action Camera</h2>
+                    <h3 class="card-price">$380.00</h3>
+                    <img class="rating" src="logos/vecteezy_5-star-rating-review-star-png-transparent_9663427_826 (1).png" alt="" class="card-rating-img">
+                    <p class="card-desc">Wordwide shifting <br> available <br>
+                        Buyers protection possible!</p>
+
+                </div>
+                <div class="next-page">
+                    <h4>See More <img class="pink-arw" src="logos/Group.svg" alt=""></h4>
+                </div>
             </div>
         </section>
      </main>
