featured section on progress

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
      <!-- header section end -->
 
-     <!-- main section end -->
+     <!-- main section start -->
      <main>
         <section>
             <h1 class="product-title">Popular Collection</h1>
@@ -136,6 +136,19 @@
                 </div>
                 <div class="next-page">
                     <h4>See More <img class="pink-arw" src="logos/Group.svg" alt=""></h4>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="featured-section-container">
+                <div class="featured-img-container">
+                    <img class="gear" src="images/gear.png" alt="">
+                </div>
+                <div class="featured-text-container">
+                    <h1>Featured products at one place</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor<br> do amet sint. Velit officia consequat duis enim velit mollit. <br>Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn-featured">Join Now <img src="logos/arrow-forward 1.png" alt=""></button>
                 </div>
             </div>
         </section>
