full site mobile responsive

--- a/index.html
+++ b/index.html
@@ -153,5 +153,18 @@
             </div>
         </section>
      </main>
+     <footer class="footer-section-container">
+        <div class="footer-section-text-container">
+            <h1>Influencer products</h1>
+        <h3>Copyright © 2020  influencer products</h3>
+        <h3>All rights reserved</h3>
+        </div>
+        <div class="social-img">
+            <img src="logos/Instagram.svg" alt="">
+            <img src="logos/Dribbble.svg" alt="">
+            <img src="logos/Twitter.svg" alt="">
+            <img src="logos/Youtube.svg" alt="">
+        </div>
+     </footer>
 </body>
 </html>
